# satori-rs

./: Cargo.toml
examples/: min_app.rs  min_sdk.rs  onebot_app.rs
examples/common/: echo_app.rs  mod.rs
src/: _core.rs  api.rs  arc.rs  core.rs  error.rs  lib.rs  macros.rs  structs.rs  tuple.rs
src/impls/: arc.rs  mod.rs  tuple.rs
src/impls/net/: app.rs  mod.rs  sdk.rs
src/impls/onebot11/: events.rs  mod.rs  structs.rs
src/message/: elements.rs  mod.rs
src/net/: app.rs  sdk.rs
