[package]
name = "satori"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http", "message", "net-sdk"]
http = ["dep:headers", "dep:http"]
reqwest = ["http", "dep:reqwest", "dep:url"]
message = ["dep:quick-xml"]
net-app = [
    "dep:axum",
    "dep:futures-util",
    "http",
]
net-sdk = [
    "dep:futures-util",
    "dep:tokio-tungstenite",
    "reqwest",
]
onebot11 = [
    "dep:tokio-tungstenite",
    "reqwest",
]

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws", "headers"], optional = true }
futures-util = { version = "0.3.28", optional = true }
headers = { version = "0.3.9", optional = true }
http = { version = "0.2.9", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
reqwest = { version = "0.11.22", features = ["json"], optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.20.1", optional = true }
tokio-util = "0.7.9"
tracing = "0.1.37"
url = { version = "2.4.1", features = ["serde"], optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["signal"] }
tracing-subscriber = { version = "0.3.17", features = ["time", "fmt"] }

[[example]]
name = "min_sdk"
required-features = ["net-app"]

[[example]]
name = "onebot_app"
required-features = ["onebot11"]
